--- a/README.html
+++ b/README.html
@@ -385,22 +385,28 @@ blockquote {
 
 </head>
 <body>
-<h1 id="organicoil">organicOil</h1>
+<h1 id="organic-oil-manufacturer">Organic Oil Manufacturer</h1>
 <p>Organic oil manufacturer Ethereum Blockchain example</p>
-<h1 id="story">Story</h1>
+<h2 id="story">Story</h2>
 <p>The organic farmer Bob produces exclusive rapeseed oils.  Bob presses the oils in a nearby rapeseed mill. Afterward, he sells the oils at the farm shop.   The oil is bottling in one-liter bottles, and each bottle has a unique identity code. Farming and the Farm store (selling) are separate concerns.  When Bob plans to produce oil, he harvests one or more fields and transports the seed to the mill. The mill pressed and bottled the oil. Bob will do all administrative stuff for the mill.</p>
 <p>This example shows the possibilities of tracking of products like wine, beer, bread, or products in chemical or pharmaceutical industries. It tracks the products from the field to the customer. The example has one primary essence and two production steps.</p>
-<h1 id="activity-diagram">Activity Diagram</h1>
-<p><img src="images/ActivityDiagram.svg" alt="AcitivityDiagram"></p>
-<h1 id="sequence-diagram">Sequence Diagram</h1>
-<p><img src="images/SequenceDiagram.svg" alt="AcitivityDiagram"></p>
-<h1 id="state-diagram">State Diagram</h1>
-<p><img src="images/StateDiagram.svg" alt="AcitivityDiagram"></p>
-<h1 id="data-model">Data Model</h1>
-<h2 id="business-logic">Business Logic</h2>
-<p><img src="images/DataModelBusinessModel.svg" alt="AcitivityDiagram"></p>
-<h2 id="smartcontract-logic">SmartContract Logic</h2>
-<p><img src="images/DataModelSmartContract.svg" alt="AcitivityDiagram"></p>
+<p><img src="images/field.png" alt="Rapeseed Field"></p>
+<h2 id="activity-diagram">Activity Diagram</h2>
+<p><img src="images/ActivityDiagram.svg" alt="Acitivity Diagram"></p>
+<p>This Activity Diagram identifies the main activities for each actor in the oil production process.</p>
+<h2 id="sequence-diagram">Sequence Diagram</h2>
+<p><img src="images/SequenceDiagram.svg" alt="Sequence Diagram"></p>
+<p>This Sequence Diagram illustrates the interaction between the actor for a default production and sale process.</p>
+<h2 id="state-diagram">State Diagram</h2>
+<p><img src="images/StateDiagram.svg" alt="State Diagram"></p>
+<p>This State Diagram identifies states for the Entities Bottle and Field and the Oil Production Process.</p>
+<h2 id="domain-model">Domain Model</h2>
+<h3 id="business-logic">Business Logic</h3>
+<p><img src="images/DataModelBusinessModel.svg" alt="Business Model">
+This Class Diagram describes the relations of the entities in the business domain model.</p>
+<h3 id="smartcontract-logic">SmartContract Logic</h3>
+<p><img src="images/DataModelSmartContract.svg" alt="SmartContract Model">
+This Class Model describes the relations in the technical SmartContract environment.</p>
 
 </body>
 </html>
